# CusSuperV

./: CMakeLists.txt  README.md  asset_src.qrc  main.cpp  main.qml
Guarantee/: AppInfo.h  ThemeManager.cpp  ThemeManager.h  Utilities.cpp  Utilities.h  appmange.cpp  appmange.h
IO/: asiotest.cpp  asiotest.h  serial.cpp  serial.h
Manage/: appmange.cpp  appmange.h
Template/: singleton.h
assets/js/chartjs/: Chart.qml  chart.js
assets/qml/DashBoard/: RmsPlot.qml
assets/qml/FramelessWindow/: CustomWindow.qml
assets/qml/Setup/: RmsSetup.qml
assets/qml/Windows/: MainWindow.qml
assets/qml/dashboard_js/: Chartjs.qml
assets/translations/: de.ts  en.ts  zh.ts
rms_api/: serialspectrometer.cpp  serialspectrometer.h
rms_api/filter/savitzky_golay/: gram_savitzky_golay.cpp  gram_savitzky_golay.h  spatial_filters.cpp  spatial_filters.h
test/: AsioTest.cpp  CMakeLists.txt  test_my_class.cc
test/testclass/: gasiotest.cpp  gasiotest.h
